objects/IMI_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Request__c</fullName>
        <label>HTTP Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTP_Response__c</fullName>
        <label>HTTP Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTP_Status_Code__c</fullName>
        <label>HTTP Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Status_Message__c</fullName>
        <label>HTTP Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status_Code__c</fullName>
        <label>Integration Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status_Message__c</fullName>
        <label>Integration Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Transaction_ID__c</fullName>
        <label>Integration Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>IMI Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>IMI Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMI Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>